# podst_prog_restauracja

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build_release.yml
app/: CMakeLists.txt  main.cpp
assets/: README.md
data/: setup.txt
data/menu/: napoje.txt  pasta.txt  pizza.txt
example_data/: orders.txt  setup.txt
example_data/menu/: burgery.txt  napoje.txt  pizza.txt
include/: category.h  check.h  entry.h  history.h  meal.h  menu.h  order.h  restaurant.cpp  restaurant.h
lib/: CMakeLists.txt  category.cpp  check.cpp  entry.cpp  history.cpp  meal.cpp  menu.cpp  order.cpp  restaurant.cpp
